[gd_scene load_steps=9 format=3 uid="uid://bcfkko84vijht"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_dv0n3"]
[ext_resource type="Texture2D" uid="uid://bkwmaotr28302" path="res://assets/bg/Yellow.png" id="2_rt2cr"]
[ext_resource type="Texture2D" uid="uid://cowy84ab57ood" path="res://assets/platform/Terrain (16x16).png" id="3_3nv6f"]
[ext_resource type="AudioStream" uid="uid://c157qlkldsnfg" path="res://audio/menu/hover.mp3" id="4_3vewq"]
[ext_resource type="AudioStream" uid="uid://ebaex3hufkcx" path="res://audio/menu/pressed.mp3" id="5_368bd"]
[ext_resource type="FontFile" uid="uid://csocm37ewd54a" path="res://assets/BebasNeue-Regular.otf" id="6_yjr16"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_u5374"]
texture = ExtResource("3_3nv6f")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
20:4/0 = 0
21:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
17:5/0 = 0
18:5/0 = 0
19:5/0 = 0
20:5/0 = 0
21:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
17:6/0 = 0
18:6/0 = 0
19:6/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
17:8/0 = 0
18:8/0 = 0
19:8/0 = 0
20:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
17:9/0 = 0
18:9/0 = 0
19:9/0 = 0
20:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
18:10/0 = 0
19:10/0 = 0
20:10/0 = 0

[sub_resource type="TileSet" id="TileSet_2pcnw"]
sources/0 = SubResource("TileSetAtlasSource_u5374")

[node name="MainMenu" type="Node"]
script = ExtResource("1_dv0n3")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="BG" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="TextureRect" type="TextureRect" parent="ParallaxBackground/BG"]
offset_right = 1155.0
offset_bottom = 653.0
texture = ExtResource("2_rt2cr")
stretch_mode = 1

[node name="Land" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="TileMap" type="TileMap" parent="ParallaxBackground/Land"]
scale = Vector2(2, 2)
tile_set = SubResource("TileSet_2pcnw")
format = 2
layer_0/tile_data = PackedInt32Array(1048575, 458752, 0, 1114111, 458752, 1, 1179647, 458752, 1, 1245183, 458752, 1, 1310719, 458752, 1, 1376255, 458752, 1, 1441791, 589824, 0, 983040, 458752, 0, 1048576, 458752, 1, 1114112, 589824, 0, 1179648, 655360, 0, 1245184, 458752, 1, 1310720, 458752, 1, 1376256, 458752, 1, 983041, 458752, 0, 1048577, 458752, 1, 1114113, 458752, 1, 1179649, 458752, 1, 1245185, 458752, 1, 1310721, 458752, 1, 1376257, 458752, 1, 983042, 458752, 0, 1048578, 458752, 1, 1114114, 458752, 1, 1179650, 458752, 1, 1245186, 458752, 1, 1310722, 589824, 0, 1376258, 458752, 1, 983043, 458752, 0, 1048579, 458752, 1, 1114115, 458752, 1, 1179651, 458752, 1, 1245187, 589824, 0, 1310723, 458752, 1, 1376259, 458752, 1, 983044, 458752, 0, 1048580, 458752, 1, 1114116, 458752, 1, 1179652, 458752, 1, 1245188, 589824, 0, 1310724, 458752, 1, 1376260, 458752, 1, 983045, 458752, 0, 1048581, 458752, 1, 1114117, 458752, 1, 1179653, 655360, 0, 1245189, 458752, 1, 1310725, 458752, 1, 1376261, 458752, 1, 983046, 458752, 0, 1048582, 458752, 1, 1114118, 458752, 1, 1179654, 458752, 1, 1245190, 458752, 1, 1310726, 655360, 0, 1376262, 458752, 1, 983047, 458752, 0, 1048583, 458752, 1, 1114119, 458752, 1, 1179655, 458752, 1, 1245191, 458752, 1, 1310727, 655360, 0, 1376263, 458752, 1, 983048, 458752, 0, 1048584, 458752, 1, 1114120, 458752, 1, 1179656, 458752, 1, 1245192, 458752, 1, 1310728, 458752, 1, 1376264, 458752, 1, 983049, 458752, 0, 1048585, 458752, 1, 1114121, 458752, 1, 1179657, 458752, 1, 1245193, 589824, 0, 1310729, 458752, 1, 1376265, 655360, 0, 983050, 458752, 0, 1048586, 458752, 1, 1114122, 458752, 1, 1179658, 458752, 1, 1245194, 458752, 1, 1310730, 458752, 1, 1376266, 458752, 1, 983051, 458752, 0, 1048587, 655360, 0, 1114123, 589824, 0, 1179659, 458752, 1, 1245195, 655360, 0, 1310731, 458752, 1, 1376267, 655360, 0, 983052, 458752, 0, 1048588, 458752, 1, 1114124, 458752, 1, 1179660, 458752, 1, 1245196, 458752, 1, 1310732, 458752, 1, 1376268, 458752, 1, 983053, 458752, 0, 1048589, 655360, 0, 1114125, 589824, 0, 1179661, 458752, 1, 1245197, 589824, 0, 1310733, 458752, 1, 1376269, 458752, 1, 983054, 458752, 0, 1048590, 458752, 1, 1114126, 458752, 1, 1179662, 458752, 1, 1245198, 458752, 1, 1310734, 458752, 1, 1376270, 458752, 1, 983055, 458752, 0, 1048591, 458752, 1, 1114127, 458752, 1, 1179663, 458752, 1, 1245199, 458752, 1, 1310735, 458752, 1, 1376271, 655360, 0, 983056, 458752, 0, 1048592, 458752, 1, 1114128, 458752, 1, 1179664, 458752, 1, 1245200, 458752, 1, 1310736, 458752, 1, 1376272, 458752, 1, 983057, 458752, 0, 1048593, 458752, 1, 1114129, 458752, 1, 1179665, 458752, 1, 1245201, 589824, 0, 1310737, 458752, 1, 1376273, 458752, 1, 983058, 458752, 0, 1048594, 458752, 1, 1114130, 458752, 1, 1179666, 458752, 1, 1245202, 458752, 1, 1310738, 458752, 1, 1376274, 458752, 1, 983059, 458752, 0, 1048595, 458752, 1, 1114131, 458752, 1, 1179667, 458752, 1, 1245203, 458752, 1, 1310739, 458752, 1, 1376275, 458752, 1, 983060, 458752, 0, 1048596, 458752, 1, 1114132, 589824, 0, 1179668, 458752, 1, 1245204, 458752, 1, 1310740, 655360, 0, 1376276, 458752, 1, 983061, 458752, 0, 1048597, 458752, 1, 1114133, 458752, 1, 1179669, 589824, 0, 1245205, 655360, 0, 1310741, 589824, 0, 1376277, 458752, 1, 983062, 458752, 0, 1048598, 458752, 1, 1114134, 458752, 1, 1179670, 655360, 0, 1245206, 458752, 1, 1310742, 589824, 0, 1376278, 458752, 1, 983063, 458752, 0, 1048599, 458752, 1, 1114135, 458752, 1, 1179671, 655360, 0, 1245207, 458752, 1, 1310743, 458752, 1, 1376279, 458752, 1, 983064, 458752, 0, 1048600, 458752, 1, 1114136, 458752, 1, 1179672, 655360, 0, 1245208, 458752, 1, 1310744, 589824, 0, 1376280, 458752, 1, 983065, 458752, 0, 1048601, 458752, 1, 1114137, 458752, 1, 1179673, 458752, 1, 1245209, 458752, 1, 1310745, 458752, 1, 1376281, 458752, 1, 983066, 458752, 0, 1048602, 589824, 0, 1114138, 458752, 1, 1179674, 458752, 1, 1245210, 458752, 1, 1310746, 458752, 1, 1376282, 458752, 1, 983067, 458752, 0, 1048603, 458752, 1, 1114139, 589824, 0, 1179675, 589824, 0, 1245211, 458752, 1, 1310747, 458752, 1, 1376283, 458752, 1, 983068, 458752, 0, 1048604, 458752, 1, 1114140, 589824, 0, 1179676, 458752, 1, 1245212, 458752, 1, 1310748, 458752, 1, 1376284, 458752, 1, 983069, 458752, 0, 1048605, 589824, 0, 1114141, 458752, 1, 1179677, 458752, 1, 1245213, 458752, 1, 1310749, 458752, 1, 1376285, 458752, 1, 983070, 458752, 0, 1048606, 458752, 1, 1114142, 458752, 1, 1179678, 655360, 0, 1245214, 458752, 1, 1310750, 458752, 1, 1376286, 458752, 1, 983071, 458752, 0, 1048607, 458752, 1, 1114143, 458752, 1, 1179679, 458752, 1, 1245215, 458752, 1, 1310751, 458752, 1, 1376287, 458752, 1, 983072, 458752, 0, 1048608, 589824, 0, 1114144, 655360, 0, 1179680, 589824, 0, 1245216, 458752, 1, 1310752, 458752, 1, 1376288, 589824, 0, 983073, 458752, 0, 1048609, 458752, 1, 1114145, 458752, 1, 1179681, 458752, 1, 1245217, 458752, 1, 1310753, 458752, 1, 1376289, 458752, 1, 983074, 458752, 0, 1048610, 589824, 0, 1114146, 458752, 1, 1179682, 458752, 1, 1245218, 458752, 1, 1310754, 458752, 1, 1376290, 458752, 1, 983075, 458752, 0, 1048611, 458752, 1, 1114147, 458752, 1, 1179683, 458752, 1, 1245219, 589824, 0, 1310755, 458752, 1, 1376291, 589824, 0, 983076, 458752, 0, 1048612, 458752, 1, 1114148, 458752, 1, 1179684, 458752, 1, 1245220, 458752, 1, 1310756, 458752, 1, 1376292, 458752, 1)

[node name="PlayGame" type="Button" parent="."]
texture_filter = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -169.5
offset_top = -44.0
offset_right = 169.5
offset_bottom = 44.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("6_yjr16")
theme_override_font_sizes/font_size = 30
text = "PLAY"

[node name="QuitGame" type="Button" parent="."]
texture_filter = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.718
anchor_right = 0.5
anchor_bottom = 0.718
offset_left = -169.5
offset_top = -85.264
offset_right = 169.5
offset_bottom = 2.73596
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("6_yjr16")
theme_override_font_sizes/font_size = 30
text = "QUIT"

[node name="hover" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_3vewq")

[node name="press" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_368bd")

[node name="Label" type="Label" parent="."]
offset_top = 119.0
offset_right = 1155.0
offset_bottom = 242.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_yjr16")
theme_override_font_sizes/font_size = 100
text = "FIN's REVENGE"
horizontal_alignment = 1

[connection signal="mouse_entered" from="PlayGame" to="." method="_on_play_game_mouse_entered"]
[connection signal="pressed" from="PlayGame" to="." method="_on_play_game_pressed"]
[connection signal="mouse_entered" from="QuitGame" to="." method="_on_quit_game_mouse_entered"]
[connection signal="pressed" from="QuitGame" to="." method="_on_quit_game_pressed"]
